tests/NormalTests/paczka2/big_fuzzy/44531752.err
Error in line 4: mjpbD S953 50,7
Error in line 22: vCzMOz S953 -3,2
Error in line 29: S953 A905 53,2
Error in line 26: vCzMOz A472 45,3
Error in line 33: Xkt2PR4 S953 34,8
Error in line 38: Xkt2PR4 A472 35,9
Error in line 36: vCzMOz S953 61,9
Error in line 43: J4TJfGWDQ A905 34,7
Error in line 5: OHiwz A472 19,2
Error in line 41: vCzMOz A596 3,8
Error in line 55: vCzMOz A472 61,3
Error in line 59: Xkt2PR4 A905 95,6
Error in line 62: J4TJfGWDQ S953 13,6
Error in line 46: OHiwz S953 68,8
Error in line 58: vCzMOz A905 67,3
Error in line 63: J4TJfGWDQ A596 78,6
Error in line 75: Xkt2PR4 A905 72,2
Error in line 74: mjpbD A472 52,6
Error in line 78: Xkt2PR4 A472 65,3
Error in line 80: mjpbD S953 57,3
Error in line 83: mjpbD A472 82,2
Error in line 102: OHiwz A596 23,9
Error in line 116: mjpbD A905 13,4
Error in line 122: yT4YMPfWv A905 278,2
Error in line 126: yT4YMPfWv S953 34,84
Error in line 117: Xkt2PR4 S953 52,5
Error in line 128: S953 A472 21,4
Error in line 130: J4TJfGWDQ S953 34,7
Error in line 134: Xkt2PR4 A905 4,9
Error in line 123: OHiwz S953 24,2
Error in line 135: J4TJfGWDQ A596 36,6
Error in line 149: J4TJfGWDQ S953 6,2
Error in line 145: S953 S953 24,4
Error in line 159: yT4YMPfWv A596 17,8
Error in line 152: S953 A905 83,2
Error in line 164: S953 A472 96,7
Error in line 148: Xkt2PR4 S953 0,2
Error in line 178: S953 S953 13,57
Error in line 165: yT4YMPfWv A472 196,2
Error in line 176: S953 S953 10,2
Error in line 190: vCzMOz A472 5,9
Error in line 196: vCzMOz A905 8,5
Error in line 198: vCzMOz A472 10,9
Error in line 201: mjpbD S953 39,3
Error in line 206: OHiwz A596 75,3
Error in line 202: yT4YMPfWv S953 15,5
Error in line 207: OHiwz S953 95,3
Error in line 218: OHiwz A596 41,4
Error in line 219: OHiwz S953 2,2
Error in line 222: vCzMOz S953 20,0
Error in line 232: yT4YMPfWv A596 41,2
